--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 name = "semver"
 path = "src/semver/bin/main.rs"
 
+[[bin]]
+name = "getver"
+path = "src/getver/bin/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
