--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 regex = "1.7.0"
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.87"
 thiserror = "1.0.37"
